Bug 86226 - [IVB Regression]igt/kms_setmode/invalid-clone-single-crtc fails
Summary: [IVB Regression]igt/kms_setmode/invalid-clone-single-crtc fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 86230 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-11-13 02:08 UTC by lu hua
Modified: 2017-10-06 14:33 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (106.81 KB, text/plain)
2014-11-13 02:08 UTC, lu hua
no flags Details

Description lu hua 2014-11-13 02:08:45 UTC
Created attachment 109374 [details]
dmesg

==System Environment==
--------------------------
Regression: Yes
good commit: 4241f00ad1f6c906486ee05ebf35b4251c59ef5c
bad commit: 477f799e966db4c36ca40198e1f48ff0af69e319

Non-working platforms: IVB

==kernel==
--------------------------
drm-intel-nightly/9a7620f405895714b4e0dc3181a8328b4406287e

==Bug detailed description== 
It fails on IVB with -queued and -nightly kernel. It works well on -fixes kernel.

output:
IGT-Version: 1.8-g50d539e (x86_64) (Linux: 3.18.0-rc3_drm-intel-nightly_9a7620_20141112+ x86_64)
Testing: invalid-clone-single-crtc 2 connector combinations
  Test id#1 CRTC count 1
    CRTC[8] [Pipe A] Mode: 640x480@60Hz Connectors: HDMI-A-1[21] (NC), HDMI-A-2[28] (NC)
Test assertion failure function test_crtc_config, file kms_setmode.c:431:
Failed assertion: config_failed == !!(tconf->flags & TEST_INVALID)
Last errno: 2, No such file or directory
Subtest invalid-clone-single-crtc: FAIL (0.063s)

==Reproduce steps==
---------------------------- 
1. ./kms_setmode --run-subtest invalid-clone-single-crtc
Comment 1 Daniel Vetter 2014-11-17 20:21:38 UTC
commit 6ac0483b35bfc7546398d1198b65ed7be17f3cc5
Author: Matt Roper <matthew.d.roper@intel.com>
Date:   Mon Nov 17 09:59:28 2014 -0800

    drm/i915: Propagate invalid setcrtc cloning errors back to userspace
Comment 2 Yi Sun 2014-11-18 01:23:39 UTC
(In reply to Daniel Vetter from comment #1)
> commit 6ac0483b35bfc7546398d1198b65ed7be17f3cc5
> Author: Matt Roper <matthew.d.roper@intel.com>
> Date:   Mon Nov 17 09:59:28 2014 -0800
> 
>     drm/i915: Propagate invalid setcrtc cloning errors back to userspace

Verified. The issue can be fixed by commit 6ac0483b35bfc7546398d1198b65ed7be17f3cc5

Linux x-ivb9 3.18.0-rc2_kcloud_6ac048_20141118_debug+ 

[root@x-ivb9 tests]# ./kms_setmode --run-subtest invalid-clone-single-crtc
IGT-Version: 1.8-gaa63fc7 (x86_64) (Linux: 3.18.0-rc2_kcloud_6ac048_20141118_debug+ x86_64)
Testing: invalid-clone-single-crtc 2 connector combinations
  Test id#1 CRTC count 1
    CRTC[8] [Pipe A] Mode: 640x480@60Hz Connectors: HDMI-A-1[21] (NC), HDMI-A-2[28] (NC)
  Test id#2 CRTC count 1
    CRTC[12] [Pipe B] Mode: 640x480@60Hz Connectors: HDMI-A-1[21] (NC), HDMI-A-2[28] (NC)
  Test id#3 CRTC count 1
    CRTC[16] [Pipe C] Mode: 640x480@60Hz Connectors: HDMI-A-1[21] (NC), HDMI-A-2[28] (NC)
Testing: invalid-clone-single-crtc 3 connector combinations
  Test id#4 CRTC count 1
    CRTC[8] [Pipe A] Mode: 640x480@60Hz Connectors: VGA-1[18] (NC), HDMI-A-1[21] (NC), HDMI-A-2[28] (NC)
  Test id#5 CRTC count 1
    CRTC[12] [Pipe B] Mode: 640x480@60Hz Connectors: VGA-1[18] (NC), HDMI-A-1[21] (NC), HDMI-A-2[28] (NC)
  Test id#6 CRTC count 1
    CRTC[16] [Pipe C] Mode: 640x480@60Hz Connectors: VGA-1[18] (NC), HDMI-A-1[21] (NC), HDMI-A-2[28] (NC)
Subtest invalid-clone-single-crtc: SUCCESS (0.149s)
Comment 3 Daniel Vetter 2014-11-18 12:47:28 UTC
*** Bug 86230 has been marked as a duplicate of this bug. ***
Comment 4 Elizabeth 2017-10-06 14:33:55 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.